Fix import in notebook

--- a/meanIOU_metric.ipynb
+++ b/meanIOU_metric.ipynb
@@ -28,8 +28,8 @@
     "\n",
     "from segmentation.utils import SegmentationDataset, train\n",
     "import torch\n",
-    "from segmentation.unet import UNet\n",
-    "from segmentation.resnet_18_fcn import ResNet18FCN"
+    "from segmentation.resnet_18_fcn import ResNet18FCN\n",
+    "from unet import UNet"
    ]
   },
   {
